src/argocd/infra/base/common/openbao.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao-ui
  namespace: openbao
spec:
  parentRefs:
    - name: contour-gateway-api
      namespace: contour-system
  hostnames: ["openbao.tuto.mombesoft.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: openbao-ui
          port: 8200
