src/argocd/infra/base/common/pg.tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: pg-ui
  namespace: cloudnative-pg
spec:
  parentRefs:
    - name: contour-gateway-api
      sectionName: pg-route
      namespace: contour-system
  hostnames: ["cloudnative-pg.tuto.mombesoft.com"]
  rules:
    - backendRefs:
        - name: cloudnative-pg-cluster-rw
          port: 5432
