src/argocd/infra/base/common/pi-hole.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-ui
  namespace: pihole-system
spec:
  parentRefs:
    - name: contour-gateway-api
      namespace: contour-system
  hostnames: ["pihole.tuto.mombesoft.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pi-hole-pihole-web
          port: 80
