src/argocd/infra/base/common/vault.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-ui
  namespace: vault-system
spec:
  parentRefs:
    - name: contour-gateway-api
      namespace: contour-system
  hostnames: ["vault.tuto.mombesoft.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault-ui
          port: 8200
